src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
*{
    -fx-font-family: "Segoe UI Semibold";
}

.background {
    -fx-background-color: #474747;
}
.dark-background{
    -fx-background-color: #2D2D2D;
}
.light-background{
    -fx-background-color: #707070;
}

.label {
    -fx-font-size: 11pt;
    -fx-font-family: "Segoe UI Semibold";
    -fx-text-fill: #F7F7F3;
    -fx-opacity: 1;
}

.label-bright {
    -fx-font-size: 11pt;
    -fx-font-family: "Segoe UI Semibold";
    -fx-text-fill: #F7F7F3;
    -fx-opacity: 1;
}

.label-header {
    -fx-font-size: 32pt;
    -fx-font-family: "Segoe UI Light";
    -fx-text-fill: #F7F7F3;
    -fx-opacity: 1;
}
.label-multiTeam{
    -fx-font-size: 15pt;
    -fx-text-fill:#2D2D2D;
}
.label-groupStage{
    -fx-font-size: 12pt;
    -fx-text-fill:#2D2D2D;
}
.errorFeedback{
    -fx-font-size: 11pt;
    -fx-text-fill:red;
}
.warningFeedback{
    -fx-font-size: 11pt;
    -fx-text-fill:#ff7700;
}

.radio-button{
    -fx-font-size: 11pt;
    -fx-font-family: "Segoe UI Semibold";
    -fx-text-fill: #F1F2EB;
    -fx-opacity: 1;
}
.button:hover{
    -fx-cursor: hand;
}
.button:focused{
    -fx-border-color:#019A06 ;
}

.custom-button{
    -fx-padding: 8 15 15 15;
    -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;
    -fx-background-radius: 8;
    -fx-background-color:#F1F2EB;
    -fx-text-fill: #2D2D2D;
    -fx-opacity: 1;
    -fx-padding: 5px 12px 5px 12px;
    -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );
    -fx-font-weight: bold;

}
.custom-button:hover{
    -fx-cursor: hand;
    -fx-text-fill: #2D2D2D;
}
.custom-button:focused{
    -fx-border-color:#019A06 ;
}
.custom-button:pressed{
    -fx-background-color:#EEEFE6;
    -fx-padding: 10 15 13 15;
    -fx-background-insets: 2 0 0 0,2 0 3 0, 2 0 4 0, 2 0 5 0;
    -fx-text-fill: #2D2D2D;
}
.clickable{
    -fx-cursor: hand;
}
.table-view{
    -fx-font-size: 12pt;
    -fx-text-fill: #2D2D2D;
    -fx-opacity: 1;
    -fx-background-color: #2D2D2D;
    -fx-border-color:  #F7F7F3;
    -fx-border-width: 2;
    -fx-table-cell-border-color: #2D2D2D;
}
.table-view:focused{
    -fx-background-color:  #2D2D2D;
}

.table-view .column-header-background .label{
    -fx-text-fill: #2D2D2D;
    -fx-background-color: #F7F7F3;
    -fx-table-cell-border-color: #2D2D2D;
}
.table-view .column-header-background,.column-header{
    -fx-background-color: #F7F7F3;
    -fx-table-cell-border-color: #2D2D2D;
}

.table-view .table-cell{
    -fx-text-fill: #F7F7F3;
}
.table-view .filler{
    -fx-background-color: #2D2D2D;
}

.table-row-cell{
    -fx-background-color: #616161;
    -fx-background-insets: 0, 0 0 1 0;
}

.table-row-cell:odd{
    -fx-background-color: #424242;
    -fx-background-insets: 0, 0 0 1 0;
}

.table-row-cell:selected {
    -fx-background-color: #019A06;
}

.table-view *.scroll-bar:horizontal *.increment-button,
.table-view *.scroll-bar:horizontal *.decrement-button {
    -fx-background-color: null;
    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-padding: 0;
}

.table-view *.scroll-bar:horizontal *.increment-arrow,
.table-view *.scroll-bar:horizontal *.decrement-arrow {
    -fx-background-color: null;
    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-padding: 0;
    -fx-shape: null;
}

.split-pane:horizontal > .split-pane-divider {
    -fx-background-color: transparent;
}
.split-pane:vertical > .split-pane-divider {
    -fx-background-color: transparent;
}
.menu-bar {
    -fx-background-color: #2D2D2D ;
    -fx-opacity: 1;
}
.menu:hover{
    -fx-cursor: hand;
}
.menu-bar .label {
    -fx-font-size: 12.0 pt;
    -fx-text-fill: #F7F7F3;
    -fx-font-weight: bold;
    -fx-padding: 5.0px;
}

.menu-item {
    -fx-padding: 0.0em 0.0em 0.0em 0.0em;
    -fx-text-fill: #F7F7F3;
    -fx-background: #2D2D2D ;
}
.menu-item:hover{
    -fx-cursor: hand;
}
.menu-item .label{
    -fx-font-size: 12.0 pt;
    -fx-text-fill: #F7F7F3;
}
.menu-item .label:hover{
    -fx-cursor: hand;
    -fx-font-size: 12.0 pt;
    -fx-background: #2D2D2D ;
    -fx-text-fill: #F7F7F3;
}

.context-menu {
    -fx-background-color: derive(#1d1d1d,80%);
}
.small-text{
    -fx-font-size: 10pt;
    -fx-text-fill: #F1F2EB;
}

.dark-small-text{
    -fx-font-size: 10pt;
    -fx-text-fill: #2D2D2D;
}

.medium-text{
    -fx-font-size: 14pt;
    -fx-text-fill: #F1F2EB;
}
.dark-medium-text{
    -fx-font-size: 14pt;
    -fx-text-fill: #2D2D2D;
}
.title-text{
    -fx-font-size: 18pt;
    -fx-text-fill: #F1F2EB;
    -fx-opacity: 1;
}

.dark-title-text{
    -fx-font-size: 18pt;
    -fx-text-fill: #2D2D2D;
    -fx-opacity: 1;
}

.resultInput{
    -fx-border-color:lightgray;
    -fx-font-size:30pt;
}
.choice-box {
    -fx-background-color: #F7F7F3;
    -fx-text-fill: #2D2D2D;
    -fx-mark-color: #019A06;
}
.choice-box > .label {
    -fx-text-fill: #2D2D2D; }
.incrementButtons{
    -fx-border-width: 0pt;
}
.incrementButtons:hover{
    -fx-cursor: hand;
}

.tab-pane .tab-header-area .tab-header-background {
    -fx-opacity: 0;
}

.tab-pane
{
    -fx-tab-min-width:90px;
}

.tab{
    -fx-background-insets: 0 1 0 1,0,0;
}
.tab-pane .tab
{
    -fx-background-color: #2D2D2D;

}

.tab-pane .tab:selected
{
    -fx-background-color: #019A06;
}

.tab .tab-label {
    -fx-cursor: hand;
    -fx-alignment: CENTER;
    -fx-text-fill: #F7F7F3;
    -fx-font-size: 12px;
    -fx-font-weight: bold;
}

.tab:selected .tab-label {
    -fx-alignment: CENTER;
    -fx-text-fill: #F7F7F3;
}
.tab-pane:top *.tab-header-area {
    -fx-background-insets: 0, 0 0 1 0;
    -fx-padding: 0.416667em 0.166667em 0.0em 0.0em;
}
.text-field{
    -fx-font-size: 12pt;
    -fx-text-fill: #2D2D2D;
}

